# cpp_volume_rendering

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build.sh  imgui.ini  requirements.txt  run.sh
cppvolrend/: CMakeLists.txt  app_freeglut.cpp  app_glfw.cpp  main.cpp  renderingmanager.cpp
cppvolrend/structured/_common_shaders/: _obj_ray_marching.comp
cppvolrend/structured/rc1pass/: new.comp  old.comp  ray_marching_1p.comp  rc1prenderer.cpp  rc1prenderer.h
data/: #list_structured_datasets  imgui.ini  volume_list.csv
data/Segmented/: 2024-01-05-Scene.mrml  boston_teapot.nhdr
libs/: CMakeLists.txt
libs/file_utils/: CMakeLists.txt  pvm.cpp  pvm_old.cpp  rawloader.cpp
libs/gl_utils/: CMakeLists.txt  stackmatrix.cpp  utils.cpp
libs/linux_compat/: CMakeLists.txt  gl.h
libs/linux_headers/: CMakeLists.txt  linux_headers.h
libs/math_utils/: matrix.h
libs/vis_utils/: CMakeLists.txt  camera.cpp
libs/vis_utils/filters/: utils.hpp
libs/volvis_utils/: CMakeLists.txt  datamanager.cpp  datamanager.h  reader.cpp  utils.cpp  utils.h
process_segmentation/: main.py
